# MPLC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
MotionStack/: CMakeLists.txt  README.md
MotionStack/docs/: architecture.md
MotionStack/include/: mplc_motionstack.h  mplc_motionstack_drive.h  mplc_motionstack_endian.h  mplc_motionstack_interp.h  mplc_motionstack_planner.h  mplc_motionstack_port.h  mplc_motionstack_profile.h  mplc_motionstack_q15.h  mplc_motionstack_types.h  mplc_motionstack_units.h
MotionStack/src/: drive_clearpath.c  drive_generic_stepper.c  motionstack_arc.c  motionstack_core.c  motionstack_endian.c  motionstack_linear.c  motionstack_planner.c  motionstack_profile.c  motionstack_q15.c  motionstack_units.c
MotionStack/test/: port_sim.c  port_sim.h
compiler/: CMakeLists.txt
compiler/cli/: main.c  mplc_compile.c  mplc_compile.h
compiler/codegen/: codegen.c  codegen.h
compiler/common/: diag.c  diag.h  ir.c  ir.h
compiler/frontend/fbd/: fbd_parser.c  fbd_parser.h
compiler/frontend/il/: il_parser.c  il_parser.h
compiler/frontend/ld/: ld_parser.c  ld_parser.h
compiler/frontend/plcopen/: plcopen_parser.c  plcopen_parser.h
compiler/frontend/sfc/: sfc_parser.c  sfc_parser.h
compiler/frontend/st/: st_parser.c  st_parser.h
compiler/linker/: linker.c  linker.h
compiler/semantic/: semantic.c  semantic.h
docs/: README.md  architecture.md  motion-hal.md  netburner-mod54415.md
hal/include/: mplc_hal.h  mplc_motion_hal.h  mplc_motion_types.h
runtime/: CMakeLists.txt
runtime/core/: loader.c  runtime.c  scheduler.c  vm.c
runtime/include/mplc/: io.h  loader.h  motion.h  runtime.h  scheduler.h  stdlib.h  vm.h
runtime/io/: io.c
runtime/motion/: mc_fb.c  motion.c  motion_hal_default.c
runtime/stdlib/: stdlib.c
schema/: mplc_abi.h  mplc_endian.h
scripts/: add_copyright_headers.py
tests/: CMakeLists.txt
tests/compiler/: CMakeLists.txt  run_compile.cmake  sample.il  sample.st  sample.xml  sample_ld.xml  sample_ld_branch_or.xml  sample_ld_branch_ton_or.xml  sample_ld_led8.xml  sample_ld_output_branch.xml  sample_ld_set_reset.xml  sample_ld_ton.xml  sample_ld_ton5s.xml  sample_ld_ton_set_reset.xml  sample_ld_ton_stale_bypass.xml  st_features.st
tests/motionstack/: CMakeLists.txt  test_arc_interp.c  test_endian_wire.c  test_junction_planner.c  test_junction_trajectory.c  test_linear_accel.c  test_linear_interp.c  test_planner_queue.c  test_q15.c
tests/runtime/: CMakeLists.txt  test_blink_package.c  test_dips_to_leds_package.c  test_ld_branch_ton_or.c  test_ld_led8_package.c  test_ld_set_reset.c  test_ld_ton_cold_start.c  test_ld_ton_delay.c  test_ld_ton_set_reset.c  test_motion.c  test_runtime_e2e.c  test_vm.c
tools/mplc-studio/: .gitignore  CMakeLists.txt  README.md
tools/mplc-studio/app/: CMakeLists.txt
tools/mplc-studio/app/resources/: app_icons.qrc  win32ui.rc
tools/mplc-studio/app/resources/icons/: COPYRIGHT.txt
tools/mplc-studio/app/src/: CompilerService.cpp  CompilerService.h  DeviceClient.cpp  DeviceClient.h  DeviceDiscoveryService.cpp  DeviceDiscoveryService.h  DiscoveredDevice.h  DiscoveryDialog.cpp  DiscoveryDialog.h  DocumentEditor.cpp  DocumentEditor.h  MainWindow.cpp  MainWindow.h  RibbonUi.cpp  RibbonUi.h  SerialMonitorWidget.cpp  SerialMonitorWidget.h  StImportService.cpp  StImportService.h  StInstructionToolbox.cpp  StInstructionToolbox.h  StSyntaxHighlighter.cpp  StSyntaxHighlighter.h  StTextEditor.cpp  StTextEditor.h  StudioTheme.cpp  StudioTheme.h  WorkerPool.cpp  WorkerPool.h  main.cpp
tools/mplc-studio/app/src/ladder/: BranchRegionItem.cpp  BranchRegionItem.h  CoilItem.cpp  CoilItem.h  ContactItem.cpp  ContactItem.h  FunctionBlockItem.cpp  FunctionBlockItem.h  LadderBranchLogic.cpp  LadderBranchLogic.h  LadderCanvasView.cpp  LadderCanvasView.h  LadderDraggableButton.h  LadderEditorWidget.cpp  LadderEditorWidget.h  LadderElementEditorDialog.cpp  LadderElementEditorDialog.h  LadderElementItem.cpp  LadderElementItem.h  LadderInstructionBar.cpp  LadderInstructionBar.h  LadderIoCatalog.cpp  LadderIoCatalog.h  LadderLayout.h  LadderMime.h  LadderModel.cpp  LadderModel.h  LadderPlcopenSerializer.cpp  LadderPlcopenSerializer.h  LadderPropertiesPanel.cpp  LadderPropertiesPanel.h  LadderScene.cpp  LadderScene.h  LadderStExporter.cpp  LadderStExporter.h  LadderSymbolIcons.cpp  LadderSymbolIcons.h  LadderToolbox.cpp  LadderToolbox.h  LadderToolboxItem.cpp  (+17 more)
tools/mplc-studio/installer/: MPLCStudio.iss
tools/mplc-studio/scripts/: build-mplc-studio-installer.ps1  build-mplc-studio.ps1
